# Udacity-Sensor-Fusion-Nanodegree

./: .gitattributes  .gitignore  .gitmodules  build-docker.sh
camera/exercises/: CMakeLists.txt  Makefile
camera/exercises/OpenCV_exercises/src/: change_pixels.cpp  create_matrix.cpp  load_image_3.cpp
camera/exercises/TTC_camera/src/: compute_ttc_camera.cpp
camera/exercises/TTC_lidar/src/: compute_ttc_lidar.cpp
camera/exercises/cluster_with_roi/src/: cluster_with_roi.cpp
camera/exercises/cornerness_harris/src/: cornerness_harris.cpp
camera/exercises/describe_keypoints/src/: describe_keypoints.cpp
camera/exercises/descriptor_matching/src/: descriptor_matching.cpp
camera/exercises/detect_keypoints/src/: detect_keypoints.cpp
camera/exercises/gradient_filtering/src/: gaussian_smoothing.cpp  gradient_sobel.cpp
camera/exercises/lidar_to_camera/src/: project_lidar_to_camera.cpp  show_lidar_top_view.cpp
radar/exercises/: ca_cfar.m  doppler_estimation.m  fft2d_exercise.m  fft_exercise.m  radar_range_equation.m  range_estimation.m
tools/docker/: Dockerfile
